--- a/index.html
+++ b/index.html
@@ -6,17 +6,37 @@
      <link rel="stylesheet" href="css/style.css">
     <title>Equation Solver</title>
     <script>
+        var a, b;
+        var outputText1;
+        function validate1() {
+
+            a = document.forms["input_form1"]["aterms"].value;
+            b = document.forms["input_form1"]["bterms"].value;
+            if (a == 0) {
+                outputText1 = "<em>a</em> cannot equal zero!";
+            } else if (isNaN(a)) {
+                outputText1 = "<em>a</em> must be a number!";
+            } else if (isNaN(b)) {
+                outputText1 = "<em>b</em> must be a number!";
+            } else {
+                var x= (-b)/a;
+                outputText1 = "For the equation <strong>" + (a == 1 ? "" : a) + "x + " + b + " = 0</strong>, x is equal to " + x + "</strong>";
+            }
+
+            // output the result (or errors)
+            document.getElementById("output_text1").innerHTML = outputText1;
+        }
+    </script>
+    <script>
         var a, b, c;
         var outputText;
 
         function validate() {
 
-            // get the input
             a = document.forms["input_form"]["aterm"].value;
             b = document.forms["input_form"]["bterm"].value;
             c = document.forms["input_form"]["cterm"].value;
 
-            // validate a, b and c
             if (a == 0) {
                 outputText = "<em>a</em> cannot equal zero!";
             } else if (isNaN(a)) {
@@ -26,7 +46,6 @@
             } else if (isNaN(c)) {
                 outputText = "<em>c</em> must be a number!";
             } else {
-                // calculate the result using x = (-b +- sqrt(b^2 - 4ac)) / 2a
                 var x1 = (-b - Math.sqrt(Math.pow(b, 2) - 4 * a * c)) / (2 * a);
                 var x2 = (-b + Math.sqrt(Math.pow(b, 2) - 4 * a * c)) / (2 * a);
                 outputText = "For the equation <strong>" + (a == 1 ? "" : a) + "x\u00B2 + " + (b == 1 ? "" : b) + "x + " + c + " = 0</strong>, x can equal <strong>" + x1 + "</strong> or <strong>" + x2 + "</strong>";
@@ -43,15 +62,29 @@
 <div class="heading"> <h1 style="text-align:center"><font face="arial black">Welcome in TantraByte Private Limited!</h1></font></div>
 <ul class="nav justify-content-end">
   <li class="nav-item">
-    <a class="nav-link active" href="https://www.linkedin.com/organization-guest/company/tantrabyte?challengeId=AQFifz2gQ3h0hwAAAXN_ZXscph0kQxmoeBfbvmCT3u6zQ_nY5q2JB840mll1efls43s4DQ_U6RM_D8n7GGUM6YU-tq0VPjJMqQ&submissionId=cfc4592d-aa9a-2416-589e-da3adf389b6e">Find us on Linkdin</a>
+    <a class="nav-link active" href="https://www.linkedin.com/organization-guest/company/tantrabyte?challengeId=AQFifz2gQ3h0hwAAAXN_ZXscph0kQxmoeBfbvmCT3u6zQ_nY5q2JB840mll1efls43s4DQ_U6RM_D8n7GGUM6YU-tq0VPjJMqQ&submissionId=cfc4592d-aa9a-2416-589e-da3adf389b6e">Find us on Linkedin</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="https://tantrabyte.org/">About us</a>
   </li>
 </ul>
-  <div class="second_heading">
-    <p>This is a online web tool. This quadratic equation solver web tool that will solve a second-order polynomial equation.</p>
-    <p><font size="14"><b>Please enter the coefficients <strong>a</strong>, <strong>b</strong> and <strong>c</strong> of a quadratic equation of the form <strong>ax&#x00B2; + bx + c = 0</strong></p>
+   <p><big><B>This is a online web tool. This Web tool can solve a Linear Equation and Quadratic Equation as well...</B><big></p>
+ <div class="second_heading">
+    <p font face="Castellar">
+    <p><font size="14"><b><ins>1. Linear Equation Solver : <ins></P>
+    <p><font size="14"><b>Please enter the coefficients <strong>a</strong> and <strong>b</strong> of a linear equation of the form <strong> ax + b = 0</strong></p>
+    <form name="input_form1" action="javascript:validate1();">
+        a: <input type="text" name="aterms" size="5" required>
+        b: <input type="text" name="bterms" size="5" required>
+        <br><br>
+        <input type="submit" value="Calculate">
+    </form>
+
+    <p id="output_text1"/>
+ </div>
+ <div class="third_heading">
+    <p><ins>2. Quadratic Equation Solver : </ins></P>
+    <p>Please enter the coefficients <strong>a</strong>, <strong>b</strong> and <strong>c</strong> of a quadratic equation of the form <strong>ax&#x00B2; + bx + c = 0</strong></p>
     <form name="input_form" action="javascript:validate();">
         a: <input type="text" name="aterm" size="5" required>
         b: <input type="text" name="bterm" size="5" required>
@@ -61,5 +94,6 @@
     </form>
 
     <p id="output_text"/>
+  </p>
  </div>
 </body>
