--- a/index.html
+++ b/index.html
@@ -59,13 +59,10 @@
 </head>
 
 <body>
-<div class="heading"> <h1 style="text-align:center"><font face="arial black">Welcome in TantraByte Private Limited!</h1></font></div>
+<div class="heading"> <h1 style="text-align:center"><font face="arial black">Welcome in Equation Solver Web Tool!</h1></font></div>
 <ul class="nav justify-content-end">
   <li class="nav-item">
-    <a class="nav-link active" href="https://www.linkedin.com/organization-guest/company/tantrabyte?challengeId=AQFifz2gQ3h0hwAAAXN_ZXscph0kQxmoeBfbvmCT3u6zQ_nY5q2JB840mll1efls43s4DQ_U6RM_D8n7GGUM6YU-tq0VPjJMqQ&submissionId=cfc4592d-aa9a-2416-589e-da3adf389b6e">Find us on Linkedin</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="https://tantrabyte.org/">About us</a>
+    <a class="nav-link active" href="https://www.facebook.com/anuragtieari">Find me on Facebook</a>
   </li>
 </ul>
    <p><big><B>This is a online web tool. This Web tool can solve a Linear Equation and Quadratic Equation as well...</B><big></p>
